<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_common_radius_29_white_top"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:text="@string/dialog_report_title"
        android:textColor="@color/FF171C21"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/dialog_report_desc"
        android:textColor="@color/FF1E1E21"
        android:textSize="16sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/FFEDEDED"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirst"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_common_radius_10_pink"
            android:gravity="center"
            android:text="@string/dialog_report_options_first"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSecond"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_common_radius_10_pink"
            android:gravity="center"
            android:text="@string/dialog_report_options_second"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvThird"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_common_radius_10_pink"
            android:gravity="center"
            android:text="@string/dialog_report_options_third"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>