<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/shape_common_radius_29_white_top"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dialog_conversation_delete_title"
        android:textColor="@color/FF475766"
        android:textSize="12sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/FFEDEDED"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConfirm"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_common_radius_10_white"
            android:gravity="center"
            android:text="@string/dialog_conversation_delete_confirm"
            android:textColor="@color/FFF23081"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_common_radius_10_white"
            android:gravity="center"
            android:text="@string/common_cancel"
            android:textColor="@color/FF242B33"
            android:textSize="14sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>