<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="29dp"
        android:background="@drawable/user_info_view_ad_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="61dp"
            android:text="@string/user_info_view_ad"
            android:textColor="@color/FF1E1E21"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="14dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_login_button_background"
                android:gravity="center"
                android:text="@string/common_cancel"
                android:textColor="@color/FF8E58FB"
                android:textSize="16sp" />

            <androidx.legacy.widget.Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_common_next_background"
                android:gravity="center"
                android:text="@string/common_confirm"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="144dp"
        android:layout_height="132dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@drawable/user_info_view_ad" />
</FrameLayout>