<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_app_background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="19dp"
    android:paddingEnd="19dp"
    tools:context=".login.ui.act.PresetProfileActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headerToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="114dp"
        android:text="@string/preset_profile_title"
        android:textColor="@color/FF171C21"
        android:textSize="29sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="48dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivUserAvatar"
            android:layout_width="141dp"
            android:layout_height="141dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/circleStyle"
            tools:src="@drawable/common_default_avatar_man" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivUserGender"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="4dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/create_name_gender_man" />
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/shape_common_button_style_3"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="19dp"
        android:paddingEnd="19dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserNameTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/preset_profile_tag"
            android:textColor="@color/FF242B33"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_create_name_line_background" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUserName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical|start"
            android:hint="@string/preset_profile_name_hint"
            android:maxLines="1"
            android:textColor="@color/FF5456FF"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.legacy.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStart"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="107dp"
        android:background="@drawable/shape_common_button_style_1"
        android:gravity="center"
        android:text="@string/preset_profile_confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
</androidx.appcompat.widget.LinearLayoutCompat>