<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigationRoot"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/main_nav_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="29dp"
        app:cardElevation="3dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivHomeSmall"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="centerCrop" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/main_nav_home"
                    android:textSize="11sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMessage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivMessage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@+id/tvMessage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/main_nav_message"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivMessage" />

                <com.milk.happymessage.chat.ui.view.MessageRedDotView
                    android:id="@+id/messageRedDotView"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivMessage"
                    app:layout_constraintStart_toStartOf="@+id/ivMessage" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llMine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivMine"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:scaleType="centerCrop" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/main_nav_mine"
                    android:textSize="11sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</FrameLayout>